#	Copyright (C) 2020-2023 CAEN SpA
#
#	This file is part of the CAEN FE Library.
#
#	The CAEN FE Library is free software; you can redistribute it and/or
#	modify it under the terms of the GNU Lesser General Public
#	License as published by the Free Software Foundation; either
#	version 3 of the License, or (at your option) any later version.
#
#	The CAEN FE Library is distributed in the hope that it will be useful,
#	but WITHOUT ANY WARRANTY; without even the implied warranty of
#	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
#	Lesser General Public License for more details.
#
#	You should have received a copy of the GNU Lesser General Public
#	License along with the CAEN FE Library; if not, see
#	https://www.gnu.org/licenses/.
#
#	SPDX-License-Identifier: LGPL-3.0-or-later

ACLOCAL_AMFLAGS = -I m4
SUBDIRS = src
include_HEADERS = \
	include/CAEN_FELib.h
EXTRA_DIST = \
	COPYING \
	COPYING.LESSER \
	INSTALL \
	README_LINUX.txt \
	CHANGELOG \
	doc/html/
felibdocdir = $(docdir)
dist_felibdoc_DATA = \
	doc/documentation.tar.gz
